test/types/unions/accessByIndex-bad1.good
accessByIndex-bad1.chpl:7: error: invalid index passed to union field access
