test/types/unions/accessByIndex-bad1.chpl
union U {
  var x: int;
  var y: string;
}

var u: U;
writeln(u(-1));
